cka-tasks/gateway-api/route-examples/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    port: 80
    protocol: HTTP
  - name: https
    protocol: HTTPS
    port: 443
    hostname: example-4.com
    tls:
      certificateRefs:
      - kind: Secret
        group: ""
        name: example-4-tls-secret
