cka-tasks/gateway-api/route-examples/example-1.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-1
spec:
  parentRefs:
  - name: gateway
  hostnames:
  - "example1.com"
  rules:
  # Verification: $ curl -H "Host: example1.com" 127.0.0.1:8080/pod-1
  - matches:
    - path:
        type: PathPrefix
        value: /pod-1
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplaceFullPath
            replaceFullPath: /
    backendRefs:
    - name: service-1
      port: 8080
